<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_gray_50"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fb_login_button_bottom_margin"
        android:layout_marginEnd="@dimen/fb_login_button_horizontal_margin"
        android:layout_marginStart="@dimen/fb_login_button_horizontal_margin"
        android:layout_marginTop="@dimen/fb_login_button_top_margin"
        android:paddingBottom="@dimen/fb_login_button_bottom_padding"
        android:paddingTop="@dimen/fb_login_button_top_padding" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/google_login_button_bottom_margin"
        android:layout_marginEnd="@dimen/google_login_button_horizontal_margin"
        android:layout_marginStart="@dimen/google_login_button_horizontal_margin" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/divider_view_bottom_margin"
        android:layout_marginEnd="@dimen/divider_view_horizontal_margin"
        android:layout_marginStart="@dimen/divider_view_horizontal_margin"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/divider_line_width"
            android:layout_height="@dimen/divider_line_height"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/divider_line_end_margin"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/or" />

        <View
            android:layout_width="@dimen/divider_line_width"
            android:layout_height="@dimen/divider_line_height"
            android:layout_gravity="center_vertical|end"
            android:layout_marginStart="@dimen/divider_line_start_margin"
            android:background="@color/black" />


    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_gray_50">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/email_editText_bottom_margin"
            android:layout_marginEnd="@dimen/email_editText_horizontal_margin"
            android:layout_marginStart="@dimen/email_editText_horizontal_margin"
            android:background="@drawable/edit_text_round_corners"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingBottom="@dimen/email_editText_vertical_padding"
            android:paddingTop="@dimen/email_editText_vertical_padding"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_gray_50">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/password_editText_bottom_margin"
            android:layout_marginEnd="@dimen/password_editText_horizontal_margin"
            android:layout_marginStart="@dimen/password_editText_horizontal_margin"
            android:background="@drawable/edit_text_round_corners"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="@dimen/editText_password_vertical_padding"
            android:paddingTop="@dimen/editText_password_vertical_padding"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_button_bottom_margin"
        android:layout_marginEnd="@dimen/login_button_horizontal_margin"
        android:layout_marginStart="@dimen/login_button_horizontal_margin"
        android:background="@drawable/button_round_corners"
        android:text="@string/log_in"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/have_account_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/have_account_textView_end_margin"
            android:text="@string/dont_have_an_account" />

        <TextView
            android:id="@+id/getStarted_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/have_account_textView"
            android:text="@string/get_started"
            android:textColor="@color/colorPrimaryDark" />
    </RelativeLayout>
</LinearLayout>